# im1-pfs-auth

./: .editorconfig  .gitignore  .prettierignore  .tool-versions  Makefile  README.md  TODO.md  package-lock.json  package.json  project.code-workspace  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: cicd-stage-1-deploy-to-dev.yml  cicd-stage-1-deploy-to-internal-qa.yml  cicd-stage-2-deploy-to-int-and-sandbox.yml  cicd-stage-3-deploy-to-prod.yml  cicd.yml  code-checks.yml  codeql-analysis.yml  pull-request-checks.yml  reusable-additional-code-checks.yml  reusable-code-checks.yml  reusable-core-code-checks.yml  reusable-deploy.yml  reuseable-generate-postman-collection.yml
.proxygen/: settings.yaml
app/: Dockerfile  pyproject.toml
app/api/: app.py  exception.py  utils.py
app/api/application/: forward_request.py  jwt.py  utils.py
app/api/application/tests/: test_forward_request.py  test_jwt.py
app/api/domain/: base_client.py  exception.py  forward_request_model.py  forward_response_model.py
app/api/domain/tests/: test_forward_request_model.py  test_forward_response_model.py
app/api/infrastructure/: base_client.py  emis_client.py  tpp_client.py
app/api/infrastructure/emis/: client.py  models.py
app/api/infrastructure/emis/data/: mocked_response.json
app/api/infrastructure/emis/tests/: test_client.py
app/api/infrastructure/tests/: test_emis_client.py
app/api/infrastructure/tpp/: client.py  models.py
app/api/infrastructure/tpp/data/: mocked_response.json  mocked_response.xml
app/api/infrastructure/tpp/tests/: test_client.py
app/api/tests/: test_app.py  test_utils.py
docs/adr/: ADR-002_Scan_repository_for_hardcoded_secrets.md  (+3 more)
portman/: portman-cli.json
postman/: IM1 PFS Auth Service Sandbox 28-08-2025.postman_collection.json  README.md  postman_collection.json
proxygen/: credentials.yaml
sandbox/: Dockerfile  app.py  authentication.py
scripts/: init.mk
specification/: im1-pfs-auth-api.yaml
(+79 files in other folders)
